--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <!-- partial:index.partial.html -->
-<button onclick="history.back()">Go Back</button>
+<button onclick="history.back()">Back to main menu</button>
 <section>
 <section id="module3">
 <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vRmv2srSPDbYl_Fy6X5vJaiJoefKEQ6ByRUlIRKIX57KR6HBETUvXlkSjch45CwxVRBK7i4Lj3KmNGP/embed?start=true&loop=false&delayms=30000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
